# set-noninclusion

./: .gitignore  Cargo.toml  README.md  justfile
lib/: Cargo.toml
lib/src/: lib.rs
program/: Cargo.toml
program/src/: main.rs
script/: Cargo.toml  build.rs
src/: lib.rs  main.rs
