[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8"
sp1-lib = "4.1.7"
sp1-zkvm = "4.1.7"
sp1-sdk = "4.1.7"
sp1-build = "4.1.7"
sp1-verifier = {version = "4.0.0", default-features = false}
substrate-bn = { package = "substrate-bn-succinct", git = "https://github.com/0xWOLAND/bn", branch = "release-v0.7.0" }
