[workspace]
members = [
    "lib",
    "program",
    "script",
]
resolver = "2"

[workspace.dependencies]
alloy-sol-types = "0.8"
sp1-lib = { version = "4.1.7", default-features = false }
sp1-zkvm = { version = "4.1.7", default-features = false, features = ["lib", "embedded"] }
sp1-sdk = { version = "4.1.7", default-features = false }
sp1-build = { version = "4.1.7", default-features = false }
sp1-verifier = { version = "4.1.7", default-features = false }
substrate-bn = { package = "substrate-bn-succinct", git = "https://github.com/0xWOLAND/bn", branch = "release-v0.7.0" }
