[package]
name = "fibonacci-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-sol-types = { workspace = true }
substrate-bn = { workspace = true }
sp1-hash2curve = { git = "https://github.com/0xWOLAND/sp1-hash2curve" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", branch = "ratan/patch-sha2-v0.10.8"}
anyhow = "1.0.98"
