[package]
version = "0.1.0"
name = "noninclusion-script"
edition = "2021"
default-run = "noninclusion"

[[bin]]
name = "noninclusion"
path = "src/bin/main.rs"

[[bin]]
name = "evm"
path = "src/bin/evm.rs"

[[bin]]
name = "vkey"
path = "src/bin/vkey.rs"

[dependencies]
sp1-sdk = "4.1.7"
substrate-bn = { workspace = true }
noninclusion-lib = { path = "../lib" }
dotenv = "0.15.0"

[build-dependencies]
sp1-build = "4.1.7"
