[package]
version = "0.1.0"
name = "noninclusion-script"
edition = "2021"
default-run = "noninclusion"

[[bin]]
name = "noninclusion"
path = "src/bin/main.rs"

[dependencies]
sp1-sdk = { workspace = true }
substrate-bn = { workspace = true }
noninclusion-lib = { path = "../lib" }
sha2 = { workspace = true }
dotenv = "0.15.0"
hex = "0.4.3"

[build-dependencies]
sp1-build = { workspace = true }
